--- a/BtkFinalProject.Web/Views/Shared/_AdminLayout.cshtml
+++ b/BtkFinalProject.Web/Views/Shared/_AdminLayout.cshtml
@@ -20,7 +20,7 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_AdminLoginPartial" />
-                   @* <ul class="navbar-nav flex-grow-1">
+                    <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item pt-lg-1">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
@@ -30,7 +30,7 @@
                             </a>
                         </li>
 
-                    </ul>*@
+                    </ul>
                 </div>
             </div>
         </nav>
